Test/hofs/LambdaParsefail2.dfy.expect
LambdaParsefail2.dfy(6,38): Error: invalid LambdaArrow
1 parse errors detected in LambdaParsefail2.dfy
